force-app/main/default/objects/Account/fields/Accstats__c.field-meta.xml
<CustomField>
    <fullName>Accstats__c</fullName>
    <label>Accstats</label>
    <length>20</length>
    <type>Text</type>
</CustomField>