force-app/main/default/objects/Account/fields/ext_345__c.field-meta.xml
<CustomField>
    <fullName>ext_345__c</fullName>
    <externalId>true</externalId>
    <label>ext_345</label>
    <length>20</length>
    <type>Text</type>
</CustomField>