force-app/main/default/objects/Account/fields/july7Demofield__c.field-meta.xml
<CustomField>
    <fullName>july7Demofield__c</fullName>
    <label>july7Demofield</label>
    <length>20</length>
    <type>Text</type>
</CustomField>