force-app/main/default/objects/Account/fields/X15Jan__c.field-meta.xml
<CustomField>
    <fullName>X15Jan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>15Jan</label>
    <type>Checkbox</type>
</CustomField>